{
  "version": 4,
  "terraform_version": "1.9.4",
  "serial": 51,
  "lineage": "87993930-c8ab-7d2b-af75-42865bec9c92",
  "resources": [
    {
      "module": "module.kubernetes",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_cluster",
      "provider": "module.kubernetes.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:871548798187:security-group/sg-05fcc68de294d3688",
            "description": "Cluster communication with worker nodes",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "Allow cluster API Server to communicate with the worker nodes",
                "from_port": 1024,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09c70d45a6d3f894e"
                ],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-05fcc68de294d3688",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow worker nodes to communicate with the cluster API Server",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09c70d45a6d3f894e"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "travel-guide-eks-cluster-eks-cluster-sg",
            "name_prefix": "",
            "owner_id": "871548798187",
            "revoke_rules_on_delete": false,
            "tags": {
              "Deployment Type": "terraform",
              "Env": "dev",
              "Name": "travel-guide-eks-cluster-sg",
              "Project Name": "travel guide",
              "Project Owner": "Cezary Trojanowski"
            },
            "tags_all": {
              "Deployment Type": "terraform",
              "Env": "dev",
              "Name": "travel-guide-eks-cluster-sg",
              "Project Name": "travel guide",
              "Project Owner": "Cezary Trojanowski"
            },
            "timeouts": null,
            "vpc_id": "vpc-052fff5dfc9344e6e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.kubernetes",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_nodes",
      "provider": "module.kubernetes.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:871548798187:security-group/sg-09c70d45a6d3f894e",
            "description": "Security group for all nodes in the cluster",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09c70d45a6d3f894e",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow nodes to communicate with each other",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Allow worker Kubelets and pods to receive communication from the cluster control plane",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05fcc68de294d3688"
                ],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "travel-guide-node-group-eks-nodes-sg",
            "name_prefix": "",
            "owner_id": "871548798187",
            "revoke_rules_on_delete": false,
            "tags": {
              "Deployment Type": "terraform",
              "Env": "dev",
              "Name": "travel-guide-eks-nodes-sg",
              "Project Name": "travel guide",
              "Project Owner": "Cezary Trojanowski"
            },
            "tags_all": {
              "Deployment Type": "terraform",
              "Env": "dev",
              "Name": "travel-guide-eks-nodes-sg",
              "Project Name": "travel guide",
              "Project Owner": "Cezary Trojanowski"
            },
            "timeouts": null,
            "vpc_id": "vpc-052fff5dfc9344e6e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.kubernetes",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_inbound",
      "provider": "module.kubernetes.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow worker nodes to communicate with the cluster API Server",
            "from_port": 443,
            "id": "sgrule-2669351523",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-05fcc68de294d3688",
            "security_group_rule_id": "sgr-0fe09f165eb6fc5d5",
            "self": false,
            "source_security_group_id": "sg-09c70d45a6d3f894e",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.kubernetes.aws_security_group.eks_cluster",
            "module.kubernetes.aws_security_group.eks_nodes",
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.kubernetes",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_outbound",
      "provider": "module.kubernetes.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow cluster API Server to communicate with the worker nodes",
            "from_port": 1024,
            "id": "sgrule-1354538119",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-05fcc68de294d3688",
            "security_group_rule_id": "sgr-0cd628db39ce292aa",
            "self": false,
            "source_security_group_id": "sg-09c70d45a6d3f894e",
            "timeouts": null,
            "to_port": 65535,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.kubernetes.aws_security_group.eks_cluster",
            "module.kubernetes.aws_security_group.eks_nodes",
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.kubernetes",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "nodes",
      "provider": "module.kubernetes.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow nodes to communicate with each other",
            "from_port": 0,
            "id": "sgrule-200991410",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-09c70d45a6d3f894e",
            "security_group_rule_id": "sgr-01061f57f54624905",
            "self": false,
            "source_security_group_id": "sg-09c70d45a6d3f894e",
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.kubernetes.aws_security_group.eks_nodes",
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.kubernetes",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "nodes_inbound",
      "provider": "module.kubernetes.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow worker Kubelets and pods to receive communication from the cluster control plane",
            "from_port": 1025,
            "id": "sgrule-2423487602",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-09c70d45a6d3f894e",
            "security_group_rule_id": "sgr-0c46018eebb518b41",
            "self": false,
            "source_security_group_id": "sg-05fcc68de294d3688",
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.kubernetes.aws_security_group.eks_cluster",
            "module.kubernetes.aws_security_group.eks_nodes",
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04f695dab77f17175",
            "arn": "arn:aws:ec2:us-east-1:871548798187:elastic-ip/eipalloc-04f695dab77f17175",
            "association_id": "eipassoc-0cd9cb583b4eec1ef",
            "domain": "vpc",
            "id": "eipalloc-04f695dab77f17175",
            "network_border_group": "us-east-1",
            "network_interface": "eni-09384691763052491",
            "private_dns": "ip-10-0-40-175.ec2.internal",
            "private_ip": "10.0.40.175",
            "public_dns": "ec2-52-205-118-129.compute-1.amazonaws.com",
            "public_ip": "52.205.118.129",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Deployment Type": "terraform",
              "Env": "dev",
              "Name": "travel-guide-eip",
              "Project Name": "travel guide",
              "Project Owner": "Cezary Trojanowski"
            },
            "tags_all": {
              "Deployment Type": "terraform",
              "Env": "dev",
              "Name": "travel-guide-eip",
              "Project Name": "travel guide",
              "Project Owner": "Cezary Trojanowski"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:871548798187:internet-gateway/igw-06a60b3bf44569809",
            "id": "igw-06a60b3bf44569809",
            "owner_id": "871548798187",
            "tags": {
              "Deployment Type": "terraform",
              "Env": "dev",
              "Name": "travel-guide-igw",
              "Project Name": "travel guide",
              "Project Owner": "Cezary Trojanowski"
            },
            "tags_all": {
              "Deployment Type": "terraform",
              "Env": "dev",
              "Name": "travel-guide-igw",
              "Project Name": "travel guide",
              "Project Owner": "Cezary Trojanowski"
            },
            "vpc_id": "vpc-052fff5dfc9344e6e"
          },
          "dependencies": [
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04f695dab77f17175",
            "association_id": "eipassoc-0cd9cb583b4eec1ef",
            "connectivity_type": "public",
            "id": "nat-01e0f97ae5436cbf4",
            "network_interface_id": "eni-09384691763052491",
            "private_ip": "10.0.40.175",
            "public_ip": "52.205.118.129",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0f3fcc9b9773d7796",
            "tags": {
              "Deployment Type": "terraform",
              "Env": "dev",
              "Name": "travel-guide-natgw",
              "Project Name": "travel guide",
              "Project Owner": "Cezary Trojanowski"
            },
            "tags_all": {
              "Deployment Type": "terraform",
              "Env": "dev",
              "Name": "travel-guide-natgw",
              "Project Name": "travel guide",
              "Project Owner": "Cezary Trojanowski"
            }
          },
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_internet_gateway.this",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.this",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route",
      "name": "nat_gateway",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-03fc338890ed455da1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-01e0f97ae5436cbf4",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03fc338890ed455da",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_internet_gateway.this",
            "module.networking.aws_nat_gateway.this",
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.this",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-06a60b3bf44569809",
            "id": "r-rtb-01974ae7ee9a822451080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01974ae7ee9a82245",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_internet_gateway.this",
            "module.networking.aws_route_table.public",
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:871548798187:route-table/rtb-03fc338890ed455da",
            "id": "rtb-03fc338890ed455da",
            "owner_id": "871548798187",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-01e0f97ae5436cbf4",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Deployment Type": "terraform",
              "Env": "dev",
              "Name": "travel-guide-private-rt",
              "Project Name": "travel guide",
              "Project Owner": "Cezary Trojanowski"
            },
            "tags_all": {
              "Deployment Type": "terraform",
              "Env": "dev",
              "Name": "travel-guide-private-rt",
              "Project Name": "travel guide",
              "Project Owner": "Cezary Trojanowski"
            },
            "timeouts": null,
            "vpc_id": "vpc-052fff5dfc9344e6e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:871548798187:route-table/rtb-01974ae7ee9a82245",
            "id": "rtb-01974ae7ee9a82245",
            "owner_id": "871548798187",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06a60b3bf44569809",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Deployment Type": "terraform",
              "Env": "dev",
              "Name": "travel-guide-public-rt",
              "Project Name": "travel guide",
              "Project Owner": "Cezary Trojanowski"
            },
            "tags_all": {
              "Deployment Type": "terraform",
              "Env": "dev",
              "Name": "travel-guide-public-rt",
              "Project Name": "travel guide",
              "Project Owner": "Cezary Trojanowski"
            },
            "timeouts": null,
            "vpc_id": "vpc-052fff5dfc9344e6e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d14193890bf4c903",
            "route_table_id": "rtb-03fc338890ed455da",
            "subnet_id": "subnet-045eaea25a5cbccce"
          },
          "dependencies": [
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private",
            "module.networking.aws_vpc.this",
            "module.networking.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0da307b9cf6173265",
            "route_table_id": "rtb-03fc338890ed455da",
            "subnet_id": "subnet-021e864a1ea045eab"
          },
          "dependencies": [
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private",
            "module.networking.aws_vpc.this",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-068ebfb7c58ecda08",
            "route_table_id": "rtb-01974ae7ee9a82245",
            "subnet_id": "subnet-0f3fcc9b9773d7796"
          },
          "dependencies": [
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.this",
            "module.networking.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09371d7dfabe4cf61",
            "route_table_id": "rtb-01974ae7ee9a82245",
            "subnet_id": "subnet-07c18760caef9027c"
          },
          "dependencies": [
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.this",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "control_plane_sg",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:871548798187:security-group/sg-01f465183edd0c83b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01f465183edd0c83b",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.32.0/19",
                  "10.0.64.0/19",
                  "10.0.96.0/19",
                  "10.0.128.0/19"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "k8s-control-plane-sg",
            "name_prefix": "",
            "owner_id": "871548798187",
            "revoke_rules_on_delete": false,
            "tags": {
              "Deployment Type": "terraform",
              "Env": "dev",
              "Name": "travel-guide-control-plane-sg",
              "Project Name": "travel guide",
              "Project Owner": "Cezary Trojanowski"
            },
            "tags_all": {
              "Deployment Type": "terraform",
              "Env": "dev",
              "Name": "travel-guide-control-plane-sg",
              "Project Name": "travel guide",
              "Project Owner": "Cezary Trojanowski"
            },
            "timeouts": null,
            "vpc_id": "vpc-052fff5dfc9344e6e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "data_plane_sg",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:871548798187:security-group/sg-04eb9457bb63244cf",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04eb9457bb63244cf",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.32.0/19",
                  "10.0.64.0/19",
                  "10.0.96.0/19",
                  "10.0.128.0/19"
                ],
                "description": "Allow nodes to communicate with each other",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "10.0.96.0/19",
                  "10.0.128.0/19"
                ],
                "description": "Allow worker Kubelets and pods to receive communication from the cluster control plane",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "k8s-data-plane-sg",
            "name_prefix": "",
            "owner_id": "871548798187",
            "revoke_rules_on_delete": false,
            "tags": {
              "Deployment Type": "terraform",
              "Env": "dev",
              "Name": "travel-guide-data-plane-sg",
              "Project Name": "travel guide",
              "Project Owner": "Cezary Trojanowski"
            },
            "tags_all": {
              "Deployment Type": "terraform",
              "Env": "dev",
              "Name": "travel-guide-data-plane-sg",
              "Project Name": "travel guide",
              "Project Owner": "Cezary Trojanowski"
            },
            "timeouts": null,
            "vpc_id": "vpc-052fff5dfc9344e6e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_sg",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:871548798187:security-group/sg-033c8bca558bf2e26",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-033c8bca558bf2e26",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "public-sg",
            "name_prefix": "",
            "owner_id": "871548798187",
            "revoke_rules_on_delete": false,
            "tags": {
              "Deployment Type": "terraform",
              "Env": "dev",
              "Name": "travel-guide-public-sg",
              "Project Name": "travel guide",
              "Project Owner": "Cezary Trojanowski"
            },
            "tags_all": {
              "Deployment Type": "terraform",
              "Env": "dev",
              "Name": "travel-guide-public-sg",
              "Project Name": "travel guide",
              "Project Owner": "Cezary Trojanowski"
            },
            "timeouts": null,
            "vpc_id": "vpc-052fff5dfc9344e6e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "control_plane_inbound",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.32.0/19",
              "10.0.64.0/19",
              "10.0.96.0/19",
              "10.0.128.0/19"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-2382217680",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01f465183edd0c83b",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_security_group.control_plane_sg",
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "control_plane_outbound",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-2641182175",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-01f465183edd0c83b",
            "security_group_rule_id": "sgr-00a34530c68b537f0",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_security_group.control_plane_sg",
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node_outbound",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-1322774430",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-04eb9457bb63244cf",
            "security_group_rule_id": "sgr-0bfec4106a73201c7",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_security_group.data_plane_sg",
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "nodes",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.32.0/19",
              "10.0.64.0/19",
              "10.0.96.0/19",
              "10.0.128.0/19"
            ],
            "description": "Allow nodes to communicate with each other",
            "from_port": 0,
            "id": "sgrule-1462559192",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-04eb9457bb63244cf",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_security_group.data_plane_sg",
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "nodes_inbound",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.96.0/19",
              "10.0.128.0/19"
            ],
            "description": "Allow worker Kubelets and pods to receive communication from the cluster control plane",
            "from_port": 1025,
            "id": "sgrule-1018085176",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-04eb9457bb63244cf",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_security_group.data_plane_sg",
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sg_egress_public",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-2626660448",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-033c8bca558bf2e26",
            "security_group_rule_id": "sgr-0bf04a06dd38d8351",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_security_group.public_sg",
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sg_ingress_public_443",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 443,
            "id": "sgrule-3351796794",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-033c8bca558bf2e26",
            "security_group_rule_id": "sgr-0892133fef66d43f9",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_security_group.public_sg",
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sg_ingress_public_80",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-2759595413",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-033c8bca558bf2e26",
            "security_group_rule_id": "sgr-08d2ca19c1a87b282",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_security_group.public_sg",
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:871548798187:subnet/subnet-045eaea25a5cbccce",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.96.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-045eaea25a5cbccce",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "871548798187",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Deployment Type": "terraform",
              "Env": "dev",
              "Name": "travel-guide-private-subnet-0",
              "Project Name": "travel guide",
              "Project Owner": "Cezary Trojanowski"
            },
            "tags_all": {
              "Deployment Type": "terraform",
              "Env": "dev",
              "Name": "travel-guide-private-subnet-0",
              "Project Name": "travel guide",
              "Project Owner": "Cezary Trojanowski"
            },
            "vpc_id": "vpc-052fff5dfc9344e6e"
          },
          "dependencies": [
            "module.networking.aws_vpc.this",
            "module.networking.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:871548798187:subnet/subnet-021e864a1ea045eab",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.128.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-021e864a1ea045eab",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "871548798187",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Deployment Type": "terraform",
              "Env": "dev",
              "Name": "travel-guide-private-subnet-1",
              "Project Name": "travel guide",
              "Project Owner": "Cezary Trojanowski"
            },
            "tags_all": {
              "Deployment Type": "terraform",
              "Env": "dev",
              "Name": "travel-guide-private-subnet-1",
              "Project Name": "travel guide",
              "Project Owner": "Cezary Trojanowski"
            },
            "vpc_id": "vpc-052fff5dfc9344e6e"
          },
          "dependencies": [
            "module.networking.aws_vpc.this",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:871548798187:subnet/subnet-0f3fcc9b9773d7796",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.32.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f3fcc9b9773d7796",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "871548798187",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Deployment Type": "terraform",
              "Env": "dev",
              "Name": "travel-guide-public-subnet-0",
              "Project Name": "travel guide",
              "Project Owner": "Cezary Trojanowski"
            },
            "tags_all": {
              "Deployment Type": "terraform",
              "Env": "dev",
              "Name": "travel-guide-public-subnet-0",
              "Project Name": "travel guide",
              "Project Owner": "Cezary Trojanowski"
            },
            "vpc_id": "vpc-052fff5dfc9344e6e"
          },
          "dependencies": [
            "module.networking.aws_vpc.this",
            "module.networking.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:871548798187:subnet/subnet-07c18760caef9027c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.64.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07c18760caef9027c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "871548798187",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Deployment Type": "terraform",
              "Env": "dev",
              "Name": "travel-guide-public-subnet-1",
              "Project Name": "travel guide",
              "Project Owner": "Cezary Trojanowski"
            },
            "tags_all": {
              "Deployment Type": "terraform",
              "Env": "dev",
              "Name": "travel-guide-public-subnet-1",
              "Project Name": "travel guide",
              "Project Owner": "Cezary Trojanowski"
            },
            "vpc_id": "vpc-052fff5dfc9344e6e"
          },
          "dependencies": [
            "module.networking.aws_vpc.this",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:871548798187:vpc/vpc-052fff5dfc9344e6e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06f52428e84eaab44",
            "default_route_table_id": "rtb-099c54a51826e3f44",
            "default_security_group_id": "sg-0671a242db19cb32c",
            "dhcp_options_id": "dopt-0d011ba062141278a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-052fff5dfc9344e6e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-099c54a51826e3f44",
            "owner_id": "871548798187",
            "tags": {
              "Deployment Type": "terraform",
              "Env": "dev",
              "Name": "travel-guide-vpc",
              "Project Name": "travel guide",
              "Project Owner": "Cezary Trojanowski"
            },
            "tags_all": {
              "Deployment Type": "terraform",
              "Env": "dev",
              "Name": "travel-guide-vpc",
              "Project Name": "travel guide",
              "Project Owner": "Cezary Trojanowski"
            }
          }
        }
      ]
    }
  ]
}